@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-27T01:18:49Z",
-  "count_outdated" : 1926,
-  "uniques_outdated" : 1165,
+  "timestamp" : "2025-08-28T01:18:14Z",
+  "count_outdated" : 1927,
+  "uniques_outdated" : 1166,
   "count" : 1941,
   "uniques" : 1180,
   "clones" : [
-    {
-      "timestamp": "2025-08-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-15T00:00:00Z",
       "count": 1,
