@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 14,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-08-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-15T00:00:00Z",
       "count": 1,
